Hayley at EMNPL | November 18, 2024 | Our 5th year PhD student Hayley Ross presented her paper "Is artificial intelligence still intelligence? LLMs generalize to novel adjective-noun pairs, but don’t mimic the full human distribution", co-authored with Kate Davidson and Boston University's Najoung Kim, at the GenBench workshop of the EMNLP conference in Miami, where her paper won the best paper award of the workshop! Huge congrats, Hayley!|ross-awardceremony1.jpg | alt=Hayley, a young white woman, holding her diploma 
Open house for new lab space | October 03, 2024 | The Meaning & Modality Lab and the Program in American Sign Language co-hosted an open house in our beautiful new work space at 1100 Mass Ave, where we welcomed the rest of our department, and the wider Harvard/local community, to learn more about what we do and how we combine the educational and research sides of understanding the incredible capacity of human language, spoken and signed. | |