@@ -14,6 +14,7 @@ header h1 {
 
 header h2 {
     color: #fff;
+    font-size: 1.1em;
 }
 
 header nav {
