@@ -1,3 +1,23 @@
 # meaning-language
 
 Website for the Meaning &amp; Modality Linguistics Laboratory at Harvard University
+
+## Folder Structure
+
+- `index.html` — main HTML file and site entry point
+- `CSS/style.css` — styles for layout and design
+- `partials/` — reusable HTML blocks (header, footer, home)
+- `data/` — content files editable by lab members
+- `images/` — team photos, news images, etc.
+- `archive/`— old files to store without updating
+
+## Updating the site
+
+Lab members can edit content without touching code:
+
+- To update **people**: edit `data/people.txt`
+- To update **news**: edit `data/news.txt`
+- To update **publications**: edit `data/publications.txt`
+- To update **research**: edit `data/research.txt`
+
+Each `.txt` file uses a consistent format (see example inside the file).
